# promptOps_framework

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: DashboardClient.tsx
frontend/src/app/optimize/: page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/suites/: page.tsx
promptops/: __init__.py  cli.py
promptops/api/: app.py
promptops/core/: adapter.py  prompt.py  runner.py
promptops/core/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
promptops/eval/: judge.py  metrics.py
promptops/opt/: mutations.py  optimizer.py  rewriter.py
promptops/store/: db.py
promptops/tests/: dataset.py  testcase.py
