[project]
name = "promptops"
version = "0.1.0"
description = "Prompt-as-code framework with evals, optimization, and MLflow tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "typer>=0.12",
  "mlflow>=2.10",
  "python-dotenv>=1.0",
  "openai>=1.30",
  "anthropic>=0.28",
]

[project.scripts]
promptops = "promptops.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
